# Extended-Clipboard-API

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  RELEASE_NOTES.md  package-lock.json  package.json  pyproject.toml  release.sh  requirements.txt  verify_package.py
.github/: copilot-instructions.md
.github/instructions/: python.instructions.md  sqlite.instructions.md
app/: __init__.py  main.py
app/api/: main.py
app/api/clipboard/: clipboard_endpoints.py
app/core/: constants.py  db.py  db_constants.py
app/core/queries/: get_n_clips.sql
app/db/: db.py
app/db/queries/: add_clip.sql  add_clip_tag.sql  add_clip_with_timestamp.sql  add_favorite.sql  add_tag_if_not_exists.sql  delete_all_clip_tags.sql  delete_all_clips.sql  delete_all_favorites.sql  delete_all_tags.sql  delete_clip.sql  delete_clip_tags_for_clip.sql  delete_favorite_for_clip.sql  delete_unused_tag.sql  filter_clips_dynamic_queries.py  get_all_clips.sql  get_all_clips_after_id.sql  get_all_favorites.sql  get_all_from_apps.sql  get_all_tags.sql  get_last_clip_id.sql  get_n_clips.sql  get_n_clips_before_id.sql  get_num_clips.sql  get_num_clips_per_tag.sql  get_num_favorites.sql  get_tag_ids_for_clip.sql  remove_clip_tag.sql
app/endpoints/clipboard/: clipboard_endpoints.py
app/models/clipboard/: clipboard_models.py  filters.py
app/services/clipboard/: clipboard_service.py
scripts/: create_db.py  db_runner.mjs  prepare_sqlcipher_amalgamation.sh  run_api.py  seed_db.py
tests/: conftest.py  test_query.py
tests/db_tests/clipboard/: test_clipboard_queries.py  test_clipboard_triggers.py  test_queries.py  test_triggers.py
tests/endpoint_tests/clipboard/: test_clipboard_endpoints.py
tests/service_tests/clipboard/: test_clipboard_service.py
(+6 files in other folders)
