[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "extended-clipboard-api"
version = "0.1.0"
description = "A small FastAPI service for persisting clipboard entries in an encrypted SQLite database"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Daniel Freer", email = "djfreer92@gmail.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Framework :: FastAPI",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.1",
    "uvicorn>=0.35.0",
    "httpx>=0.28.1",
    "pyperclip>=1.9.0",
    "sqlalchemy>=2.0.42",
    "pytest-cov>=6.2.1",
    "docopt>=0.6.2",
    "python-dotenv>=1.0.0",
    "importlib-metadata>=8.0.0",
    "tomli>=2.0.1",
    "yarg>=0.1.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=6.2.1",
]

[project.urls]
Homepage = "https://github.com/DJFreer92/Extended-Clipboard-API"
Repository = "https://github.com/DJFreer92/Extended-Clipboard-API"
Issues = "https://github.com/DJFreer92/Extended-Clipboard-API/issues"

[project.scripts]
extended-clipboard-api = "app.api.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.setuptools.package-data]
"app.db.queries" = ["*.sql"]
"app.db.schema.tables" = ["*.sql"]
"app.db.schema.indexes" = ["*.sql"]
"app.db.schema.triggers" = ["*.sql"]
"app.db.schema.views" = ["*.sql"]
